--- a/python_grammar/02_제어문.ipynb
+++ b/python_grammar/02_제어문.ipynb
@@ -1050,6 +1050,242 @@
     "        continue\n",
     "    print(\"%d번 학생 축하합니다. 합격입니다.\" % (number+1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a450504-9547-4556-a8f8-0c4957ee21a5",
+   "metadata": {},
+   "source": [
+    "## 구구단\n",
+    "* 이중for문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7b0c7a8d-5885-4c9f-b7d2-874c24d545be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================\n",
+      "x= 2\n",
+      "====================\n",
+      "2*1 = 2\n",
+      "2*2 = 4\n",
+      "2*3 = 6\n",
+      "2*4 = 8\n",
+      "2*5 = 10\n",
+      "2*6 = 12\n",
+      "2*7 = 14\n",
+      "2*8 = 16\n",
+      "2*9 = 18\n",
+      "====================\n",
+      "x= 3\n",
+      "====================\n",
+      "3*1 = 3\n",
+      "3*2 = 6\n",
+      "3*3 = 9\n",
+      "3*4 = 12\n",
+      "3*5 = 15\n",
+      "3*6 = 18\n",
+      "3*7 = 21\n",
+      "3*8 = 24\n",
+      "3*9 = 27\n",
+      "====================\n",
+      "x= 4\n",
+      "====================\n",
+      "4*1 = 4\n",
+      "4*2 = 8\n",
+      "4*3 = 12\n",
+      "4*4 = 16\n",
+      "4*5 = 20\n",
+      "4*6 = 24\n",
+      "4*7 = 28\n",
+      "4*8 = 32\n",
+      "4*9 = 36\n",
+      "====================\n",
+      "x= 5\n",
+      "====================\n",
+      "5*1 = 5\n",
+      "5*2 = 10\n",
+      "5*3 = 15\n",
+      "5*4 = 20\n",
+      "5*5 = 25\n",
+      "5*6 = 30\n",
+      "5*7 = 35\n",
+      "5*8 = 40\n",
+      "5*9 = 45\n",
+      "====================\n",
+      "x= 6\n",
+      "====================\n",
+      "6*1 = 6\n",
+      "6*2 = 12\n",
+      "6*3 = 18\n",
+      "6*4 = 24\n",
+      "6*5 = 30\n",
+      "6*6 = 36\n",
+      "6*7 = 42\n",
+      "6*8 = 48\n",
+      "6*9 = 54\n",
+      "====================\n",
+      "x= 7\n",
+      "====================\n",
+      "7*1 = 7\n",
+      "7*2 = 14\n",
+      "7*3 = 21\n",
+      "7*4 = 28\n",
+      "7*5 = 35\n",
+      "7*6 = 42\n",
+      "7*7 = 49\n",
+      "7*8 = 56\n",
+      "7*9 = 63\n",
+      "====================\n",
+      "x= 8\n",
+      "====================\n",
+      "8*1 = 8\n",
+      "8*2 = 16\n",
+      "8*3 = 24\n",
+      "8*4 = 32\n",
+      "8*5 = 40\n",
+      "8*6 = 48\n",
+      "8*7 = 56\n",
+      "8*8 = 64\n",
+      "8*9 = 72\n",
+      "====================\n",
+      "x= 9\n",
+      "====================\n",
+      "9*1 = 9\n",
+      "9*2 = 18\n",
+      "9*3 = 27\n",
+      "9*4 = 36\n",
+      "9*5 = 45\n",
+      "9*6 = 54\n",
+      "9*7 = 63\n",
+      "9*8 = 72\n",
+      "9*9 = 81\n",
+      "====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 10):\n",
+    "    print('='*20)\n",
+    "    print('x=', i)\n",
+    "    print('='*20)\n",
+    "    for j in range(1, 10):\n",
+    "        print(f'{i}*{j} =',i*j)\n",
+    "print('='*20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf29b93-9aa7-4abc-a5b6-d57b26e54e37",
+   "metadata": {},
+   "source": [
+    "## 리스트 컴프리헨션"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0d94ca74-78ff-420e-aa60-45a926560b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "result = []\n",
+    "\n",
+    "for num in a:\n",
+    "    result.append(num*3)\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9f23e297-abd7-4920-9c9c-712a310aaf82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "\n",
+    "result = [num * 3 for num in a]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5a4791ef-b262-4487-bccc-f1f117f78c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "\n",
+    "result = [num * 3 for num in a if num % 2 == 0]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ebf14be5-a234-472a-9c21-127bb2b1fed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List Comprehension Time: 0.07145166397094727\n",
+      "For loop Time: 0.18363308906555176\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time() \n",
+    "numbers = [i for i in range(1000000)] \n",
+    "end = time.time() \n",
+    "print('List Comprehension Time:', end-start)\n",
+    "\n",
+    "start = time.time() \n",
+    "numbers = []\n",
+    "for i in range(1000000):\n",
+    "    numbers.append(i)\n",
+    "end = time.time() \n",
+    "print('For loop Time:', end-start)"
+   ]
   }
  ],
  "metadata": {
